# HotelManagment

./: CMakeLists.txt  README.md
src/main/: CMakeLists.txt  Database.cpp  Database.h  Events.h  Main.cpp  Reception.cpp  Reception.h  Rooom.h  StateMachine.cpp  StateMachine.h  main.cpp
src/test/: CMakeLists.txt  TestDatabase.cpp  TestDatabase.h  TestMain.cpp  TestStateMachine.cpp  TestStateMachine.h  test_main.cpp
