set(PROJECT_NAME HotelManagementTest)
project(${PROJECT_NAME})
add_subdirectory(libs)
include_directories(libs/googletest/include)
file(GLOB SOURCES ../../src/main/*.cpp *cpp *h)
list(FILTER SOURCES EXCLUDE REGEX "Main.cpp")
add_executable(${PROJECT_NAME} TestMain.cpp TestStateMachine.cpp TestDatabase.cpp ${SOURCES})
target_link_libraries(${PROJECT_NAME} PUBLIC gtest gtest_main)